Changing HTML, CSS and JS to copy to clipboard

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                     <div class="actionbox">
                         <h2>Generate a Password</h2>
                         <hr>
-                        <div class="result-box">
+                        <div class="resultBox">
                         <!-- the span below is the location where the JS outputs the random generated password -->
-                        <span id="result"><b>Your Secure Password</b></span>
+                        <textarea class="result-box" id="result" type="Text" placeholder="Your Secure Password"></textarea>
                         </div>
                         <hr>
                         <!-- the buttons below activate the users input to drive the JS code -->
